--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1"
